tools/tests/errors/set_add_unhashable.ki
var s = Set()
s.add([1])
